Fixed multiple issues with fields such as plant description or garden name not fitting or behaving unexpectedly within containers, changed most units to relative to be consistent across screen resolutions

--- a/src/main/resources/static/css/gardenDetails.css
+++ b/src/main/resources/static/css/gardenDetails.css
@@ -1,3 +1,8 @@
+:root {
+    --half-scrollable-container-width: calc(50%);
+    --container-width: calc(100%);
+}
+
 .tableList-header-button-contain {
     display: flex;
     gap: 0;
@@ -10,6 +15,7 @@
     gap: 20px;
     min-height: 100vh;
     padding-bottom: 20px;
+    --container-width: 100%
 }
 
 .content-container {
@@ -26,18 +32,24 @@
     text-overflow: ellipsis;
 }
 
+.tableList-header-title {
+    max-width: calc(var(--container-width));
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
 .scrollable-container {
     flex: 2;
-    max-height: 600px;
+    max-height: 100vh;
+    max-width: 60vw;
     overflow-y: auto;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 1rem;
     word-wrap: break-word !important;
     overflow-wrap: break-word !important;
     white-space: normal !important;
-
+    --half-scrollable-container-width: 50%;
 }
-
 .plants-grid {
     display: flex;
     flex-wrap: wrap;
@@ -45,15 +57,27 @@
 }
 
 .plant-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     flex: 1 1 calc(33.33%);
     box-sizing: border-box;
 }
 
+
 .plant-description {
-    display: block;
-    width: 100%;
-    text-align: center;
+    max-width: calc(var(--half-scrollable-container-width) + 10vw);
+    white-space: pre-wrap;
     word-wrap: break-word;
+}
+
+.plant-image {
+    align-self: flex-start;
+}
+
+.edit-button-container {
+    margin-top: 10px;
+    gap: 0;
 }
 
 .break-word {
@@ -61,7 +85,3 @@
     white-space: normal;
 }
 
-.edit-button-container {
-    margin-top: 10px;
-    gap: 0;
-}
